# base-agent

./: .env.example  PLAN.md  README.md  pyproject.toml
scripts/: com.forecast-portfolio.mark.plist  com.forecast-portfolio.resolve.plist  install-launchd.sh  record_manual_scan.py  uninstall-launchd.sh
src/forecast_portfolio/: __init__.py  cli.py  config.py  markets.py  metrics.py  pipeline.py  portfolio.py  research_tools.py
tests/: test_markets.py  test_metrics.py  test_pipeline_mock.py  test_portfolio.py  test_research_tools.py
