[project]
name = "forecast-portfolio"
version = "0.1.0"
description = "Paper portfolio forecasting Kalshi/Polymarket questions with a multi-stage Claude pipeline"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
fp = "forecast_portfolio.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecast_portfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
